--- a/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/netrc.erb
+++ b/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/netrc.erb
@@ -2,3 +2,5 @@
 machine github.com login <%= @github_id %> password <%= @github_password %>
 
 machine api.github.com login <%= @github_id %> password <%= @github_password %>
+
+default login login <%= @github_id %> password <%= @github_password %>
