fix environment bug for ./dev setup

--- a/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/netrc.erb
+++ b/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/netrc.erb
@@ -3,4 +3,4 @@ machine github.com login <%= @github_id %> password <%= @github_password %>
 
 machine api.github.com login <%= @github_id %> password <%= @github_password %>
 
-default login login <%= @github_id %> password <%= @github_password %>
+default login <%= @github_id %> password <%= @github_password %>
