--- a/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/buildcrowbarconf.erb
+++ b/vagrant_crowbar/cookbooks/crowbar-dev/templates/default/buildcrowbarconf.erb
@@ -2,3 +2,4 @@ DEV_GITHUB_ID=<%= @github_id %>
 ISO_LIBRARY=<%= @iso_library %>
 ISO_DEST=<%= @iso_dest %>
 CACHE_DIR=<%= @cache_dir %>
+CROWBAR_DIR=$HOME/crowbar
